--- a/content/resources/66-160.md
+++ b/content/resources/66-160.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: 21A.506 classroom in Fall 2016.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21a-506-the-anthropology-of-politics-u-s-presidential-election-edition-fall-2016/ce1b4c5f543f0a5858006a4e9bbfe156_66-160.jpg
+file: /media/courses/21a-506-the-anthropology-of-politics-u-s-presidential-election-edition-fall-2016/ce1b4c5f543f0a5858006a4e9bbfe156_66-160.jpg
 file_type: image/jpeg
 image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Instructor Insights
+parent_type: ThisCourseAtMITSection
 resourcetype: Image
 title: 66-160.jpg
 uid: ce1b4c5f-543f-0a58-5800-6a4e9bbfe156
