--- a/content/resources/ocwimage-2017-03-20.md
+++ b/content/resources/ocwimage-2017-03-20.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: Less than 10 students enrolled in Fall 2016.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21a-506-the-anthropology-of-politics-u-s-presidential-election-edition-fall-2016/0c3bf6045f1dfdb90e966f93a2a2f0e4_ocwimage.2017-03-20.2017180814
+file: /media/courses/21a-506-the-anthropology-of-politics-u-s-presidential-election-edition-fall-2016/0c3bf6045f1dfdb90e966f93a2a2f0e4_ocwimage.2017-03-20.2017180814
 file_type: image/png
 image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Instructor Insights
+parent_type: ThisCourseAtMITSection
 resourcetype: Image
 title: less than 10 students
 uid: 0c3bf604-5f1d-fdb9-0e96-6f93a2a2f0e4
