--- a/content/resources/ocwimage-2017-03-20.md
+++ b/content/resources/ocwimage-2017-03-20.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Instructor Insights
 parent_type: ThisCourseAtMITSection
+parent_uid: 4f363b4e-bec1-ed6f-6315-84b21a7631ef
 resourcetype: Image
 title: less than 10 students
 uid: 0c3bf604-5f1d-fdb9-0e96-6f93a2a2f0e4
