--- a/content/resources/21a-506f16.md
+++ b/content/resources/21a-506f16.md
@@ -3,7 +3,7 @@ content_type: resource
 description: 'After a highly-charged and often controversial political campaign, Donald
   Trump was sworn in as the 45th President of the United States on January 20, 2017.
   This image is in the public domain. Source: Wikimedia Commons.'
-file: /media/courses/21a-506-the-anthropology-of-politics-u-s-presidential-election-edition-fall-2016/1aa58b3a578b5fd22866968892030ea4_21a-506f16.jpg
+file: /courses/21a-506-the-anthropology-of-politics-u-s-presidential-election-edition-fall-2016/1aa58b3a578b5fd22866968892030ea4_21a-506f16.jpg
 file_type: image/jpeg
 image_metadata:
   caption: 'After a highly-charged and often controversial political campaign, Donald
@@ -18,3 +18,5 @@ resourcetype: Image
 title: 21a-506f16.jpg
 uid: 1aa58b3a-578b-5fd2-2866-968892030ea4
 ---
+After a highly-charged and often controversial political campaign, Donald Trump was sworn in as the 45th President of the United States on January 20, 2017. This image is in the public domain. Source: Wikimedia Commons.
+
