--- a/content/resources/66-160.md
+++ b/content/resources/66-160.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: 21A.506 classroom in Fall 2016.
-file: /media/courses/21a-506-the-anthropology-of-politics-u-s-presidential-election-edition-fall-2016/ce1b4c5f543f0a5858006a4e9bbfe156_66-160.jpg
+file: /courses/21a-506-the-anthropology-of-politics-u-s-presidential-election-edition-fall-2016/ce1b4c5f543f0a5858006a4e9bbfe156_66-160.jpg
 file_type: image/jpeg
 image_metadata:
   caption: ''
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 66-160.jpg
 uid: ce1b4c5f-543f-0a58-5800-6a4e9bbfe156
 ---
+21A.506 classroom in Fall 2016.
+
