Sync all content

--- a/content/resources/ocwimage-2017-03-20.md
+++ b/content/resources/ocwimage-2017-03-20.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: ''
   image-alt: ''
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Instructor Insights
 parent_type: ThisCourseAtMITSection
@@ -17,4 +18,3 @@ title: less than 10 students
 uid: 0c3bf604-5f1d-fdb9-0e96-6f93a2a2f0e4
 ---
 Less than 10 students enrolled in Fall 2016.
-
