--- a/content/resources/21a-506f16.md
+++ b/content/resources/21a-506f16.md
@@ -13,10 +13,10 @@ image_metadata:
   image-alt: With his right hand raised in the air, an old, reddish-grey haired man
     rests his left hand on a Bible held by an elegantly-dressed young woman.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 21a-506f16.jpg
 uid: 1aa58b3a-578b-5fd2-2866-968892030ea4
 ---
 After a highly-charged and often controversial political campaign, Donald Trump was sworn in as the 45th President of the United States on January 20, 2017. This image is in the public domain. Source: Wikimedia Commons.
-
