Sync all content

--- a/content/resources/21a-506f16-th.md
+++ b/content/resources/21a-506f16-th.md
@@ -4,6 +4,7 @@ description: 'After a highly-charged and often controversial political campaign,
   Trump was sworn in as the 45th President of the United States on January 20, 2017.
   This image is in the public domain. Source: Wikimedia Commons.'
 file: /courses/21a-506-the-anthropology-of-politics-u-s-presidential-election-edition-fall-2016/04de9ba201fbb064210e047a2f769c00_21a-506f16-th.jpg
+file_size: 6264
 file_type: image/jpeg
 image_metadata:
   caption: 'After a highly-charged and often controversial political campaign, Donald
