--- a/content/resources/ocwimage-2017-03-20.md
+++ b/content/resources/ocwimage-2017-03-20.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Less than 10 students enrolled in Fall 2016.
 file: /courses/21a-506-the-anthropology-of-politics-u-s-presidential-election-edition-fall-2016/0c3bf6045f1dfdb90e966f93a2a2f0e4_ocwimage.2017-03-20.2017180814
+file_size: 2955
 file_type: image/png
 image_metadata:
   caption: ''
