--- a/content/resources/21a-506f16.md
+++ b/content/resources/21a-506f16.md
@@ -9,7 +9,8 @@ file_type: image/jpeg
 image_metadata:
   caption: 'After a highly-charged and often controversial political campaign, Donald
     Trump was sworn in as the 45{{< sup "th" >}} President of the United States on
-    January 20, 2017. (This image is in the public domain. Source: [Wikimedia Commons](https://commons.wikimedia.org/wiki/File:Donald_Trump_swearing_in_ceremony.jpg).)'
+    January 20, 2017. (This image is in the public domain. Source: {{% resource_link
+    "2c4a7c56-2c15-4116-8b3b-7ea72f3233fc" "Wikimedia Commons" %}}.)'
   credit: 'This image is in the public domain. Source: Wikimedia Commons.'
   image-alt: With his right hand raised in the air, an old, reddish-grey haired man
     rests his left hand on a Bible held by an elegantly-dressed young woman.
